--- a/plugin.cfg
+++ b/plugin.cfg
@@ -3,5 +3,5 @@
 name="Simple Testing"
 description="Small testing framework for Godot 4."
 author="Accumulator"
-version="1.0.0"
+version="2.0.0a"
 script="simple_testing.gd"
